# eac-pc

./: Makefile.in  README  autogen.sh  configure  configure.ac
examples/xymypointer/cpp/: xymypointer.cpp
examples/xymypointer/eac-pc/: output  output.cpp  xymypointer.eac
src/: Makefile.am  Makefile.in  debugman.cc  debugman.cc~  debugman.h  debugman.h~  eacman.cc  eacman.cc~  eacman.h  eacman.h~  fileman.cc  fileman.cc~  fileman.h  fileman.h~  main.cc  main.cc~  staff.h  staff.h~
test/: input.c  output.c
